# ViconStreamClient

./: .gitignore  CMakelists.txt  README.md  package.xml
config/: test_frame1.json  test_frame2.json
host_side/: StartStream.py
python/tests/: TestSettingOrigin.py
python/vicon_transformer/: __init__.py  receiver.py  vicon_transformer.py
